# BullFin-AI

./: .dockerignore  .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.ts  config.ts  logger.ts  server.ts
apps/ml/: .env.example  Dockerfile  pyproject.toml
apps/ml/app/: __init__.py  exceptions.py  logger.py  main.py  settings.py
apps/ml/app/models/: __init__.py  schemas.py
apps/ml/app/routers/: advanced.py  health.py  metrics.py
apps/ml/app/services/: __init__.py  backtest.py  forecast.py  metrics.py  monte_carlo.py  optimizer.py  prices.py  risk_score.py
apps/ml/tests/: __init__.py  test_metrics_math.py  test_risk_score.py
apps/web/: .env.example  Dockerfile  eslint.config.mjs  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/: package-lock.json  package.json  tailwind.config.cjs
client/src/: App.jsx  main.jsx
data-samples/: Diversified_Portfolio.csv  Sample_Portfolio.csv
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRE_DEPLOY_CHECKLIST.md
ml-engine/: app.py  requirements.txt
server/: package-lock.json  package.json  server.js
server/models/: Portfolio.js
supabase/: config.toml
supabase/migrations/: 20260418000001_initial_schema.sql  20260418000002_storage.sql
supabase/seed/: seed.sql
(+95 files in other folders)
