[project]
name = "bullfin-ml"
version = "0.1.0"
description = "BullFin-AI ML engine — FastAPI service for portfolio quant metrics and forecasting"
requires-python = ">=3.11"
dependencies = [
  # --- Web framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",

  # --- Data & markets ---
  "yfinance>=0.2.44",
  "pandas>=2.2.3",
  "numpy>=2.1.1",
  "scipy>=1.14.1",

  # --- ML & optimization ---
  "scikit-learn>=1.5.2",
  "PyPortfolioOpt>=1.5.5",

  # --- Infrastructure ---
  "redis>=5.0.8",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",

  # Explicit pin because `PyPortfolioOpt` -> `skbase` transitively imports
  # `packaging.markers` but doesn't declare it as a hard dep. On slim Python
  # base images (where pip's vendored copy is not exposed) the top-level
  # `packaging` package isn't installed automatically, producing a
  # ModuleNotFoundError at startup. Explicit pin avoids that.
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
